@@ -4,6 +4,7 @@ amf_content_type=application/x-amf
 # Request
 amf_request_title=AMF Request
 edit_xml_btn=Edit XML
+res_var=Response Variable
 
 # Request Defaults
 amf_request_defaults_title=AMF Request Defaults
